--- a/color-game.css
+++ b/color-game.css
@@ -1,23 +1,58 @@
 body {
 	background-color: #232323;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
 h1 {
 	color: white;
 	text-align: center;
+	background: steelblue;
+	margin: 0;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height: 1.1;
+	padding: 20px 0;
+}
+
+button {
+	border: none;
+	text-transform: uppercase;
+	height: 100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size: inherit;
+	transition: all 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
+}
+
+button:hover {
+	color: white;
+	background: steelblue;
+}
+
+#message {
+	display: inline-block;
+	width: 20%;
 }
 
 .square {
+	border-radius: 15%;
 	width: 30%;
 	background: purple;
 	padding-bottom: 30%;
 	float: left;
-	margin: 1.66%
+	margin: 1.66%;
+	transition: background 0.3s;
+	-webkit-transition: background 0.3s;
+	-moz-transition: background 0.3s;
 }
 
 #container {
 	max-width: 600px;
-	margin: 0 auto;
+	margin: 20px auto;
 }
 
 #stripe {
@@ -27,5 +62,10 @@ h1 {
 }
 
 .selected {
-	background: blue;
+	color: white;
+	background: steelblue;
+}
+
+#color-display {
+	font-size: 200%;
 }
