--- a/color-game.css
+++ b/color-game.css
@@ -9,7 +9,7 @@ h1 {
 	text-align: center;
 	background: steelblue;
 	margin: 0;
-	font-weight: normal;
+	font-weight: bold;
 	text-transform: uppercase;
 	line-height: 1.1;
 	padding: 20px 0;
@@ -36,6 +36,9 @@ button:hover {
 #message {
 	display: inline-block;
 	width: 20%;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: steelblue;
 }
 
 .square {
@@ -68,4 +71,6 @@ button:hover {
 
 #color-display {
 	font-size: 200%;
+	text-align: center;
+	display: block;
 }
